tests/baselines/reference/topLevelAwaitErrors.11.errors.txt
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
index.ts(3,8): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index.ts (1 errors) ====
    // await disallowed in import=
    declare var require: any;
    import await = require("./other");
           ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    
==== other.ts (0 errors) ====
    declare const _await: any;
    export { _await as await };
    